corrected paths for css file and images

--- a/web/main.html
+++ b/web/main.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
     <script type="text/javascript" src="/eel.js"></script>
-    <link rel="stylesheet" href="/web/css/index.css">
+    <link rel="stylesheet" href="./css/index.css">
 
     <title>Mode Creator</title>
 
@@ -21,21 +21,21 @@
             <div id="input">
                 <div class="input">
                     <input type="text" placeholder="Link">
-                    <button><img src="/web/images/search icon.png" alt=""></button>
+                    <button><img src="./images/search icon.png" alt=""></button>
                 </div>
                 <div class="input">
                     <input type="text" placeholder="Link">
-                    <button><img src="/web/images/search icon.png" alt=""></button>
+                    <button><img src="./images/search icon.png" alt=""></button>
                 </div>
                 <div class="input">
                     <input type="text" placeholder="Link">
-                    <button><img src="/web/images/search icon.png" alt=""></button>
+                    <button><img src="./images/search icon.png" alt=""></button>
                 </div>
             </div>
 
             <div id="buttons">
                 <div id="add">
-                        <button id="add" onclick="add()"><img src="/web/images/plus icon.png" alt=""></button>
+                        <button id="add" onclick="add()"><img src="./images/plus icon.png" alt=""></button>
                 </div>
                 <div id="ok_cancel">
                     <button>OK</button>
@@ -49,7 +49,7 @@
 
     <script>
         function add(){
-            var node = '<div class="input"><input type="text" placeholder="Link"><button><img src="/web/images/search icon.png" alt=""></button></div>'
+            var node = '<div class="input"><input type="text" placeholder="Link"><button><img src="./images/search icon.png" alt=""></button></div>'
             document.getElementById("input").innerHTML += node
         }
     </script>
